--- a/index.html
+++ b/index.html
@@ -19,6 +19,19 @@
                     link_hover-effect--black
                     ">Languages</a>
                 </li>
+                <li>
+                    <a href=""class="
+                    nav_link--anchor
+                    link_hover-effect
+                    link_hover-effect--black
+                    ">Project</a>
+                </li>
+                <li>
+                    <a href=""class="
+                    nav_link--anchor
+                    nav_link--anchor-primary
+                    ">Contact</a>
+                </li>
             </ul>
         </nav>
     </section>
