--- a/index.html
+++ b/index.html
@@ -36,7 +36,20 @@
                 </li>
             </ul>
         </nav>
-        
+        <div>
+            <div class ="about-me__info row">
+                <div class="about-me_info--container">
+                    <figure class="about-me__picture--mask">
+                        <img src="./assets/me.jpeg">
+                    </figure>
+                    <h1 class="about-me__info--title">Hey! I'm <span class="text-purple">David Bragg!</span></h1>
+                <p class="about-me__info--para">I'm a <strong>front-end software engineer</strong class="text-purple"> with a strong passion
+                    for building responsive and performant web applications with
+                    great user experiences that positively impacts the world.
+                </p>
+                </div>
+            </div>
+        </div>
     </section>
     
 </body>
