--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </li>
             </ul>
         </nav>
-        <div>
+        <div class=" flex flex-1">
             <div class ="about-me__info row">
                 <div class="about-me_info--container">
                     <figure class="about-me__picture--mask">
