--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class ="about-me__info row">
                 <div class="about-me_info--container">
                     <figure class="about-me__picture--mask">
-                        <img src="./assets/me.jpeg">
+                        <img src="./assets/me.jpeg" class="about-me__picture">
                     </figure>
                     <h1 class="about-me__info--title">Hey! I'm <span class="text-purple">David Bragg!</span></h1>
                 <p class="about-me__info--para">I'm a <strong>front-end software engineer</strong class="text-purple"> with a strong passion
