--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Roboto:ital,wght@0,400;0,700;1,300&display=swap" 
     rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <script src="https://kit.fontawesome.com/c8e4d183c2.js"></script>
+    <script src="https://kit.fontawesome.com/42696fbbae.js" crossorigin="anonymous"></script>
     
 </head>
 <body>
@@ -49,6 +49,20 @@
                     for building responsive and performant web applications with
                     great user experiences that positively impacts the world.
                 </p>
+                <div class="about-me__links">
+                    <a href="" class="about-me__link">
+                        <i class="fa-brands fa-linkedin-in"></i>
+                    </a>
+                    <a href="" class="about-me__link">
+                        <i class="fa-brands fa-github"></i>
+                    </a>
+                    <a href="" class="about-me__link">
+                        <i class="fa-brands fa-envelope"></i>
+                    </a>
+                    <a href="" class="about-me__link">
+                        <i class="fa-solid fa-file-pdf"></i>
+                    </a>
+                </div>
                 </div>
             </div>
         </div>
