--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
                     </a>
                 </div>
                 </div>
+                <figure class="about-me__img--container">
+                    <img src="./assets/undraw_websites.svg">
+                </figure>
             </div>
         </div>
     </section>
