--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </div>
         </div>
     </section>
-    <section id="lang-code">
+    <section id="languages">
         <div class="container">
             <div class="row">
                 <h1 class="section__title">This is my technology stack</h1>
@@ -79,26 +79,49 @@
                     <figure class="language__img--wrapper">
                         <img src="./assets/html-logo.png" class="language__img">
                     </figure>
+                    <span class="language__name">HTML</span>
                 </div>
                 <div class="language">
                     <figure class="language__img--wrapper">
                         <img src="./assets/html-logo.png" class="language__img">
                     </figure>
+                    <span class="language__name">HTML</span>
                 </div>
                 <div class="language">
                     <figure class="language__img--wrapper">
                         <img src="./assets/html-logo.png" class="language__img">
                     </figure>
+                    <span class="language__name">HTML</span>
                 </div>
                 <div class="language">
                     <figure class="language__img--wrapper">
                         <img src="./assets/html-logo.png" class="language__img">
                     </figure>
+                    <span class="language__name">HTML</span>
                 </div>
                 <div class="language">
                     <figure class="language__img--wrapper">
                         <img src="./assets/html-logo.png" class="language__img">
                     </figure>
+                    <span class="language__name">HTML</span>
+                </div>
+                <div class="language">
+                    <figure class="language__img--wrapper">
+                        <img src="./assets/html-logo.png" class="language__img">
+                    </figure>
+                    <span class="language__name">HTML</span>
+                </div>
+                <div class="language">
+                    <figure class="language__img--wrapper">
+                        <img src="./assets/html-logo.png" class="language__img">
+                    </figure>
+                    <span class="language__name">HTML</span>
+                </div>
+                <div class="language">
+                    <figure class="language__img--wrapper">
+                        <img src="./assets/html-logo.png" class="language__img">
+                    </figure>
+                    <span class="language__name">HTML</span>
                 </div>
             </div>
             </div>
