--- a/index.html
+++ b/index.html
@@ -83,21 +83,21 @@
                 </div>
                 <div class="language">
                     <figure class="language__img--wrapper">
-                        <img src="./assets/html-logo.png" class="language__img">
+                        <img src="./assets/css-logo.png" class="language__img">
                     </figure>
-                    <span class="language__name">HTML</span>
+                    <span class="language__name">CSS</span>
                 </div>
                 <div class="language">
                     <figure class="language__img--wrapper">
-                        <img src="./assets/html-logo.png" class="language__img">
+                        <img src="./assets/js-logo.png" class="language__img">
                     </figure>
-                    <span class="language__name">HTML</span>
+                    <span class="language__name">Javascript</span>
                 </div>
                 <div class="language">
                     <figure class="language__img--wrapper">
-                        <img src="./assets/html-logo.png" class="language__img">
+                        <img src="./assets/TS.png" class="language__img">
                     </figure>
-                    <span class="language__name">HTML</span>
+                    <span class="language__name">Typescript</span>
                 </div>
                 <div class="language">
                     <figure class="language__img--wrapper">
