logos added with name change for hover

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <section id="languages">
         <div class="container">
             <div class="row">
-                <h1 class="section__title">This is my technology stack</h1>
+                <h1 class="section__title">This is my <span class="text-purple">technology stack</span></h1>>
             <div class="language__list">
                 <div class="language">
                     <figure class="language__img--wrapper">
@@ -101,27 +101,27 @@
                 </div>
                 <div class="language">
                     <figure class="language__img--wrapper">
-                        <img src="./assets/html-logo.png" class="language__img">
+                        <img src="./assets/vuejs.png" class="language__img">
                     </figure>
-                    <span class="language__name">HTML</span>
+                    <span class="language__name">Vue.js</span>
                 </div>
                 <div class="language">
                     <figure class="language__img--wrapper">
-                        <img src="./assets/html-logo.png" class="language__img">
+                        <img src="./assets/Git-Icon.png" class="language__img">
                     </figure>
-                    <span class="language__name">HTML</span>
+                    <span class="language__name">GIT</span>
                 </div>
                 <div class="language">
                     <figure class="language__img--wrapper">
-                        <img src="./assets/html-logo.png" class="language__img">
+                        <img src="./assets/React-icon.png" class="language__img">
                     </figure>
-                    <span class="language__name">HTML</span>
+                    <span class="language__name">React</span>
                 </div>
                 <div class="language">
                     <figure class="language__img--wrapper">
-                        <img src="./assets/html-logo.png" class="language__img">
+                        <img src="./assets/bootstrap.jpeg" class="language__img">
                     </figure>
-                    <span class="language__name">HTML</span>
+                    <span class="language__name">Bootstrap</span>
                 </div>
             </div>
             </div>
