--- a/index.html
+++ b/index.html
@@ -128,5 +128,19 @@
         </div>
 
     </section>
+    <section id="projects">
+        <div class="container">
+            <div class="row">
+             <h1 class="section__title">Here are some of my <span class="text-purple">projects</span></h1>
+            <ul class="project__list">
+                <li class="project">
+                    <div class="project__wrapper">
+                        <img src="./assets/loopit.png" class="project__img">
+                    </div>
+                </li>
+            </ul>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
