--- a/index.html
+++ b/index.html
@@ -136,6 +136,25 @@
                 <li class="project">
                     <div class="project__wrapper">
                         <img src="./assets/loopit.png" class="project__img">
+                    <div class="project__description">
+                        <h3 class="project__description--title">Car Sales Project</h3>
+                        <h4 class="project__description--sub-title">
+                            HTML, CSS, JavaScript, React
+                        </h4>
+                        <p class="project__description--para">
+                            Car sales subscription website that finds the car you've been looking
+                            for within your price range. This uses an API to pull the desired request
+                            when searching for a vehicle. I used bootstrap for the layout and design.
+                        </p>
+                        <div class="product__description--links">
+                            <a href="www.github.com" target="_blank" class="project__description--link">
+                                <i class="fab fa-github"></i>
+                            </a>
+                            <a href="#" class="project__description--link">
+                                <i class="fab fa-link"></i>
+                            </a>
+                        </div>
+                    </div>
                     </div>
                 </li>
             </ul>
