--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                             when searching for a vehicle. I used bootstrap for the layout and design.
                         </p>
                         <div class="product__description--links">
-                            <a href="www.github.com" target="_blank" class="project__description--link">
+                            <a href="https://www.github.com" target="_blank" class="project__description--link">
                                 <i class="fab fa-github"></i>
                             </a>
                             <a href="#" class="project__description--link">
@@ -171,7 +171,7 @@
                             when searching for a vehicle. I used bootstrap for the layout and design.
                         </p>
                         <div class="product__description--links">
-                            <a href="www.github.com" target="_blank" class="project__description--link">
+                            <a href="https://www.github.com" target="_blank" class="project__description--link">
                                 <i class="fab fa-github"></i>
                             </a>
                             <a href="#" class="project__description--link">
@@ -195,7 +195,7 @@
                             when searching for a vehicle. I used bootstrap for the layout and design.
                         </p>
                         <div class="product__description--links">
-                            <a href="www.github.com" target="_blank" class="project__description--link">
+                            <a href="https://www.github.com" target="_blank" class="project__description--link">
                                 <i class="fab fa-github"></i>
                             </a>
                             <a href="#" class="project__description--link">
@@ -209,5 +209,38 @@
             </div>
         </div>
     </section>
+    <footer>
+        <div class="row footer__row">
+            <a href="#">
+                <figure class="footer__logo">
+                    <img src="./assets/logo.svg" class="footer__logo--img">
+                </figure>
+            </a>
+            <div class="footer__social--list">
+                <a href="https://google.com" 
+                class="footer__social--link
+                link_-hover-effect
+                link__hover-effect--white"
+                target="_blank">Github</a>
+                   <a href="https://google.com" 
+                    class="footer__social--link
+                    link_-hover-effect
+                    link__hover-effect--white"
+                    target="_blank">LinkedIn</a>
+                    <a href="mailto:email@email.com" 
+                    class="footer__social--link
+                    link_-hover-effect
+                    link__hover-effect--white"
+                    target="_blank">Email</a>
+                    <a href="./assets/Example Resume.pdf" 
+                    class="footer__social--link
+                    link_-hover-effect
+                    link__hover-effect--white"
+                    target="_blank" download>Resume</a> 
+            </div>
+
+            <div class="footer__copyright">Copyright c 2023 David Bragg</div>
+        </div>
+    </footer>
 </body>
 </html>
