--- a/index.html
+++ b/index.html
@@ -215,6 +215,10 @@
                 <figure class="footer__logo">
                     <img src="./assets/logo.svg" class="footer__logo--img">
                 </figure>
+                <span class="footer__logo--popper">
+                    Top
+                    <i class="fa-duotone fa-arrow-up"></i>
+                </span>
             </a>
             <div class="footer__social--list">
                 <a href="https://google.com" 
