--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                 </figure>
                 <span class="footer__logo--popper">
                     Top
-                    <i class="fa-duotone fa-arrow-up"></i>
+                    <i class="fa-solid fa-arrow-up"></i>
                 </span>
             </a>
             <div class="footer__social--list">
