fixed hover effect

--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
                 <li>
                     <a href=""class="
                     nav_link--anchor
-                    link_hover-effect
-                    link_hover-effect--black
+                    link__hover-effect
+                    link__hover-effect--black
                     ">Languages</a>
                 </li>
                 <li>
                     <a href=""class="
                     nav_link--anchor
-                    link_hover-effect
-                    link_hover-effect--black
+                    link__hover-effect
+                    link__hover-effect--black
                     ">Project</a>
                 </li>
                 <li>
@@ -223,22 +223,22 @@
             <div class="footer__social--list">
                 <a href="https://google.com" 
                 class="footer__social--link
-                link_-hover-effect
+                link__hover-effect
                 link__hover-effect--white"
                 target="_blank">Github</a>
                    <a href="https://google.com" 
                     class="footer__social--link
-                    link_-hover-effect
+                    link__hover-effect
                     link__hover-effect--white"
                     target="_blank">LinkedIn</a>
                     <a href="mailto:email@email.com" 
                     class="footer__social--link
-                    link_-hover-effect
+                    link__hover-effect
                     link__hover-effect--white"
                     target="_blank">Email</a>
                     <a href="./assets/Example Resume.pdf" 
                     class="footer__social--link
-                    link_-hover-effect
+                    link__hover-effect
                     link__hover-effect--white"
                     target="_blank" download>Resume</a> 
             </div>
