smaller phones media query

--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@
         <nav>
             <div class="personal_logo">Jeff Doyle</div>
             <ul class="nav_link_list">
-                <li>
+                <li class="nav__link">
                     <a href=""class="
                     nav_link--anchor
                     link__hover-effect
                     link__hover-effect--black
                     ">Languages</a>
                 </li>
-                <li>
+                <li class="nav__link">
                     <a href=""class="
                     nav_link--anchor
                     link__hover-effect
                     link__hover-effect--black
                     ">Project</a>
                 </li>
-                <li>
+                <li class="nav__link">
                     <a href=""class="
                     nav_link--anchor
                     nav_link--anchor-primary
