--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jeff Doyle</title>
+    <title>David Bragg</title>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Roboto:ital,wght@0,400;0,700;1,300&display=swap" 
     rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
@@ -14,7 +14,7 @@
 <body>
     <section id="about-me">
         <nav>
-            <div class="personal_logo">Jeff Doyle</div>
+            <div class="personal_logo">David Bragg</div>
             <ul class="nav_link_list">
                 <li class="nav__link">
                     <a href=""class="
@@ -44,7 +44,7 @@
                     <figure class="about-me__picture--mask">
                         <img src="./assets/me.jpeg" class="about-me__picture">
                     </figure>
-                    <h1 class="about-me__info--title">Hey! I'm <span class="text-purple">David Bragg!</span></h1>
+                    <h1 class="about-me__info--title">Hey! I'm <span class="text-purple">David Bragg!</span>&nbsp;<span class="wave">👋</span></h1>
                 <p class="about-me__info--para">I'm a <strong>front-end software engineer</strong class="text-purple"> with a strong passion
                     for building responsive and performant web applications with
                     great user experiences that positively impacts the world.
@@ -59,7 +59,7 @@
                     <a href="" class="about-me__link">
                         <i class="fa-brands fa-envelope"></i>
                     </a>
-                    <a href="" class="about-me__link">
+                    <a href="./assets/Example Resume.pdf" download class="about-me__link">
                         <i class="fa-solid fa-file-pdf"></i>
                     </a>
                 </div>
