class for header

--- a/index.html
+++ b/index.html
@@ -17,21 +17,21 @@
             <div class="personal_logo">David Bragg</div>
             <ul class="nav_link_list">
                 <li class="nav__link">
-                    <a href=""class="
+                    <a href="#languages"class="
                     nav_link--anchor
                     link__hover-effect
                     link__hover-effect--black
                     ">Languages</a>
                 </li>
                 <li class="nav__link">
-                    <a href=""class="
+                    <a href="#projects"class="
                     nav_link--anchor
                     link__hover-effect
                     link__hover-effect--black
                     ">Project</a>
                 </li>
                 <li class="nav__link">
-                    <a href=""class="
+                    <a href="mailto:email@email.com"class="
                     nav_link--anchor
                     nav_link--anchor-primary
                     ">Contact</a>
